# gbcsdpd

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum  repositories.bzl
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml
api/: BUILD.bazel  climate.pb.go  climate.proto
cmd/gbcsdpd/: BUILD.bazel  README.md  main.go
cmd/metricspusher/: BUILD.bazel  README.md  main.go  main_test.go
docs/: development.md
infra/: .gitignore  README.md  backend.tf  main.tf  setup.sh  variables.tf
init/openwrt/: README.md  gbcsdpd
init/systemd/: README.md  gbcsdpd.service
pkg/backoff/: BUILD.bazel  backoff.go
pkg/blelistener/: BUILD.bazel  blelistener.go
pkg/config/: BUILD.bazel  config.go  config_format.go  config_test.go
pkg/config/testdata/gcpbase/: config.toml
pkg/config/testdata/test1/: config.toml  creds.json  key.pem  myCa.pem
pkg/config/testdata/test2/: config.toml
pkg/ruuviparse/: BUILD.bazel  ruuviparse.go  ruuviparse_test.go
pkg/sinks/: BUILD.bazel  cloud_pubsub_sink.go  gcp_sink.go  mqtt_sink.go  mqtt_sink_test.go  ratelimiter.go  sinks.go  stdout_sink.go
scripts/: regen_go_proto.sh
